
2007-07-22  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Delete the old, empty teams for Norwegian
	Bokmaal and Norwegian Nynorsk.

	* lib/localweb.py: Put "yes" in lower case; make Autosend column
	more informative; do not link names to URLs.

	* lib/localweb.py: Do not show Last-Submitted column for external
	translations, use grey to colour code such externals, and show
	"unknown" also on team page.

2007-07-21  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/AUTHORS: Delete copyright assignments and disclaimers that
	do not belong here; they were not PO translators.

	* lib/run.py, bin/tp-robot: Add newlines in one spot instead of all
	over the place.

	* registry/registry.sgml: Remove the obsolete domains 'gbiff' and
	'darkstat'.

	* registry/AUTHORS: Sort disclaimers by date and name.

2007-07-20  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/AUTHORS: Add 18 missing disclaimers from FSF file (except
	Chinese and Korean ones, as I don't comprehend those), add several
	missing diacritics, change some postfix diacritics to real ones, and
	remove one misspelled duplicate disclaimer.

2007-07-19  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Put output scanning in correct place.

	* lib/localweb.py: Always print introductory sentence on domain page.

	* lib/localweb.py: On the domains index page, when possible, point
	to the website instead of the tarball.

2007-07-18  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/clone-domain: Adapt for the cloning of 'findutils', and fix
	some errors.

	* registry/registry.sgml: Add a 'findutils_stable' domain.

	* registry/registry.sgml: Remove leadership from those who are
	unreachable by email.

	* registry/AUTHORS: Remove duplicate entries.

2007-07-17  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py, lib/registry.py, bin/po-register, bin/tp-robot:
	Delete the remains of the mechanisms for multiple archives.
